<resources>
    <string name="all_unit_converter">Unit Converter</string>
    <string name="factor">Factor</string>
    <string name="binomial_newton">Newton binomial expansion</string>
    <string name="circle">Circle</string>
    <string name="circle_interaction">Two circles intersect</string>
    <string name="circle_tangent">Two circles intersect</string>
    <string name="close">Close</string>
    <string name="collinear">Straight</string>
    <string name="column">column</string>
    <string name="copied">Copied</string>
    <string name="create">Create</string>
    <string name="d_n_ph_n_m_m_ncalc">Software project NCalc +</string>
    <string name="delete_desc">Erase</string>
    <string name="derivative">Derivative</string>
    <string name="error_input_num">Error type the number</string>
    <string name="error">Error</string>
    <string name="expand">Expand</string>
    <string name="factor_prime">Prime factor</string>
    <string name="factor_polynomial">Factor polynomial</string>
    <string name="ellipse">Ellipse</string>
    <string name="feedback">Feedback</string>
    <string name="gi_i_thi_u_v_calc">About Ncalc</string>
    <string name="gi_tr_nh_nh_t">Smallest value</string>
    <string name="graph">Graph</string>
    <string name="help">Help</string>
    <string name="enter_expression">Enter expression</string>
    <string name="input_equation">Enter the equation</string>
    <string name="inside">Inside</string>
    <string name="interaction">Intersecting</string>
    <string name="l_ch_chu_n">Standard deviation</string>
    <string name="yes">Yes</string>
    <string name="vector">vector</string>
    <string name="title_activity_app_about">About NCalc+</string>
    <string name="title_activity_graph">Graph</string>
    <string name="th_m_ph_ng_tr_nh">More</string>
    <string name="table">Statistical</string>
    <string name="t_ng">sum</string>
    <string name="speech_not_supported">does not support voice recognition</string>
    <string name="speak_expression">Read expressions</string>
    <string name="solve_system_equation">Solve the system of equations</string>
    <string name="solve_for_var">Solve equations with variable (x, y, z, …): </string>
    <string name="solve_equation">Solve the equation</string>
    <string name="simplify_expression">Simplify expression</string>
    <string name="simplify">Simplify</string>
    <string name="settings">Setting</string>
    <string name="science_calculator">Calculator science</string>
    <string name="row">row</string>
    <string name="process">Handling</string>
    <string name="polygon">polygon</string>
    <string name="please_wait">Please wait until loaded</string>
    <string name="parallel">Parallel</string>
    <string name="outside">Outside</string>
    <string name="auto_process">Automatic data processing</string>
    <string name="line">Straight line</string>
    <string name="linear_system">System equation</string>
    <string name="logic_calculator">Calculator base</string>
    <string name="matrix">Matrix</string>
    <string name="matrix_op_inverse_a">Inverse A</string>
    <string name="matrix_op_inverse_b">Inverse B</string>
    <string name="matrix_op_tranpose_b">Trans B</string>
    <string name="matrix_op_tranpose_a">Trans A</string>
    <string name="maximum">The maximum value</string>
    <string name="more">More …</string>
    <string name="msg_delete_matrix">Do you want to create the matrix, this job will delete the existing matrix?</string>
    <string name="nav_descartes">2D geometry</string>
    <string name="nh_p_c_c_n_c_a_h">Enter the variable of the system of equations</string>
    <string name="nh_p_d_li_u">Insert information …</string>
    <string name="not_line">Not a straight line</string>
    <string name="not_interaction">No intersections</string>
    <string name="not_in_circle">None of the circle</string>
    <string name="nh_p_c_c_ph_ng_tr_nh_t_o_th_nh_h_ph">
        Enter equations forming a system of equations, then enter the equation system hidden \n
        For example: press the [more], then enter the following equation 3: \n
         x + y + z = 2 \n
         x - y + 2z = 6 \n
         z + y = 2 \n
        Then enter the hidden looking for is x, y, z \n
        Press [find experimental]
    </string>
    <string name="nh_p_d_li_u_c_ch_nhau_b_i_d_u_ph_y_nv_d_12_232_43_4">Data entry separated by a comma (,) \n \ For example: 12, 232.43, 4</string>
    <string name="above_circle">Located on the circle</string>
    <string name="not_input_equation">Unknown equations</string>
    <string name="noFunDisp">There is no function to display</string>
    <string name="tapFun">Choose to function</string>
    <string name="save">Save</string>
    <string name="add_function">Add function</string>
    <string name="cannotwrite">Can not write</string>
    <string name="not_variable">
        <![CDATA[
        No variable for solving equations </br>
        Please enter equation with variable x</br>
        Example 2x + 1 or 2x^2 + x - 2
        ]]>
    </string>
    <string name="history">History</string>
    <string name="pref_title_font">Font</string>
    <string name="pref_title_theme">Theme</string>
    <string name="solve">Solve</string>
    <string name="tangent">tangent</string>
    <string name="translate">Translate</string>
    <string name="license">License</string>
    <string name="help_main_calc" formatted="false"><![CDATA[

<p>Default calculator mode Radian</p>
<p>To calculate sin, cos, tan … the in degree, type <strong>sin (30 &deg;), cos (90 &deg;), </strong>…</p>
<p>&nbsp;</p>
<p>For expressions that contain parameters, enter an * (multiplication) between parameters and variables. Example:</p>
<p>$$ 2x ^ 2 + mx + 2 = 0 $$ Enter &nbsp;<strong>2x ^ 2 + m * x + 2 = 0</strong></p>
<p>$$\\frac{1}{2ax + b}$$ Enter <strong>1 &nbsp;/ (2a * x + b)</strong></p>
<p>&nbsp;</p>
<table width="100%">
<tbody>
<tr>
<td colspan="2" width="100%">
<p><strong>LEARN SOME OPERATORS SUPPORT</strong></p>
</td>
</tr>
<tr>
<td width="42%">
<p>+ (Plus sign)</p>
</td>
<td width="57%">
<p>Plus</p>
</td>
</tr>
<tr>
<td width="42%">
<p>- (Minus sign)</p>
</td>
<td width="57%">
<p>Minus</p>
</td>
</tr>
<tr>
<td width="42%">
<p>* (Multiply sign)</p>
</td>
<td width="57%">
<p>Multiply</p>
</td>
</tr>
<tr>
<td width="42%">
<p>/</p>
</td>
<td width="57%">
<p>Divide</p>
</td>
</tr>
<tr>
<td width="42%">
<p>% (Percent sign)</p>
</td>
<td width="57%">
<p>Percent</p>
</td>
</tr>
<tr>
<td width="42%">
<p>^</p>
</td>
<td width="57%">
<p>Exponentiation</p>
</td>
</tr>
<tr>
<td width="42%">
<p>!</p>
</td>
<td width="57%">
<p>Factorial</p>
</td>
</tr>
</tbody>
</table>
<p>&nbsp;</p>
<table>
<tbody>
<tr>
<td colspan="2" width="590">
<p><strong>Constants</strong> (Keyboard mExpression)</p>
</td>
</tr>
<tr>
<td width="253">
<p>Pi</p>
</td>
<td width="337">
<p>pi</p>
</td>
</tr>
<tr>
<td width="253">
<p>HEY</p>
</td>
<td width="337">
<p>e</p>
</td>
</tr>
<tr>
<td width="253">
<p>i</p>
</td>
<td width="337">
<p>Imaginary unit</p>
</td>
</tr>
<tr>
<td width="253">
<p>Infinity</p>
</td>
<td width="337">
<p>Infinity</p>
</td>
</tr>
</tbody>
</table>
<p>&nbsp;</p>
<table width="100%">
<tbody>
<tr>
<td colspan="2" width="100%">
<p><strong>SIGHT AND MATHEMATICS CONTENT IS SUPPORTED</strong></p>
</td>
</tr>
<tr>
<td width="43%">
<p>Sqrt (x) or &radic; (x)</p>
</td>
<td width="56%">
<p>Returns the positive square root of x</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Cbrt (x)</p>
</td>
<td width="56%">
<p>Cube root of x</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Abs (x)</p>
</td>
<td width="56%">
<p>Returns the absolute value of a number</p>
</td>
</tr>
<tr>
<td width="43%">
<p>sin (x)</p>
</td>
<td width="56%">
<p>Returns the sine of angle x gave</p>
</td>
</tr>
<tr>
<td width="43%">
<p>cos (x)</p>
</td>
<td width="56%">
<p>Returns the cosine of the angle x</p>
</td>
</tr>
<tr>
<td width="43%">
<p>tan (x)</p>
</td>
<td width="56%">
<p>Returns the tangent of the angle x</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Asin (x) or Arcsin (x)</p>
</td>
<td width="56%">
<p>Returns the inverse cosine of a number</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Acos (x) or Arccos(x)</p>
</td>
<td width="56%">
<p>Returns the arccosine of a number</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Atan (x) or Arctan (x)</p>
</td>
<td width="56%">
<p>The arctangent function.</p>
</td>
</tr>
<tr>
<td width="43%">
<p>sinh (x)</p>
</td>
<td width="56%">
<p>Sinh function</p>
</td>
</tr>
<tr>
<td width="43%">
<p>cosh (x)</p>
</td>
<td width="56%">
<p>Cosh function</p>
</td>
</tr>
<tr>
<td width="43%">
<p>tanh (x)</p>
</td>
<td width="56%">
<p>Tanh function</p>
</td>
</tr>
<tr>
<td width="43%">
<p>C(n, k)</p>
</td>
<td width="56%">
<p>Combinations</p>
</td>
</tr>
<tr>
<td width="43%">
<p>P(n, k)</p>
</td>
<td width="56%">
<p>Permutation</p>
</td>
</tr>
<tr>
<td width="43%">
<p>asinh (x) or arcsinh (x)</p>
</td>
<td width="56%">
<p>The hyperbolic arcsine function.</p>
</td>
</tr>
<tr>
<td width="43%">
<p>acosh (x) or arccosh (x)</p>
</td>
<td width="56%">
<p>The hyperbolic arccosine function.</p>
</td>
</tr>
<tr>
<td width="43%">
<p>atanh (x) or arctanh (x)</p>
</td>
<td width="56%">
<p>The hyperbolic arctangent function.</p>
</td>
</tr>
<tr>
<td width="43%">
<p>ln(x)</p>
</td>
<td width="56%">
<p>Logarithm base e</p>
</td>
</tr>
<tr>
<td width="43%">
<p>log(x)</p>
</td>
<td width="56%">
<p>Returns the natural logarithm of x..</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Log(a, b)</p>
</td>
<td width="56%">
<p>Logarithm base a of b</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Exp(x)</p>
</td>
<td width="56%">
<p>Returns the ceiling value of&nbsp;x.</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Celi (x)</p>
</td>
<td width="56%">
<p>Rounds a number away from 0</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Floor (x)</p>
</td>
<td width="56%">
<p>Returns the floor value of x.</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Max (a, b)</p>
</td>
<td width="56%">
<p>Returns the largest value in two numbers a and b</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Min (a, b)</p>
</td>
<td width="56%">
<p>Returns the smallest value in two numbers a and b</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Rnd (a)</p>
</td>
<td width="56%">
<p>Random function</p>
</td>
</tr>
<tr>
<td width="43%">
<p>GDC(a, b)</p>
</td>
<td width="56%">
<p>The least common multiple of a and b</p>
</td>
</tr>
<tr>
<td width="43%">
<p>LCM(a, b)</p>
</td>
<td width="56%">
<p>Greatest common divisor of a and b</p>
</td>
</tr>
<tr>
<td width="43%">
<p>Sign(x)</p>
</td>
<td width="56%">
<p>Gives -1, 0 or 1 depending on whether x is negative, zero or positive.</p>
</td>
</tr>
</tbody>
</table>
<p>&nbsp;</p>
<p>&nbsp;</p>
<p>&nbsp;</p>

    ]]></string>
    <string name="help_solve_equation" formatted="false">@string/help_main_calc</string>
    <string name="help_derivative" formatted="false">@string/help_main_calc</string>
    <string name="help_expression" formatted="false">@string/help_main_calc</string>
    <string name="choose_mode">Select the mode 2D or 3D graphs</string>
    <string name="reason">Reason</string>
    <string name="math_error">Math Error</string>
    <string name="add_equation">Add equation</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="lower_limit">Lower limit</string>
    <string name="upper_limit">Upper limit</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="lic_desc">Open source license application</string>
    <string name="t_c_gi_tr_n_l_duy">Author: LE DUY TRAN</string>
    <string name="thpt_nguy_n_b_nh_khi_m">Nguyen Binh Khiem High School</string>
    <string name="rate_desc">Rate this applications on the Google Play Store</string>
    <string name="go_to_facebook">Go to Facebook</string>
    <string name="fb_desc">Support of the application. Receive bug reports.</string>
    <string name="num_of_var">Number of variable</string>
    <string name="enter_var_hint">Enter variable of system equation</string>
</resources>