<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <HorizontalScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <io.codetail.widget.RevealLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="16dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_solve"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/solve" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/graph" />


            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/factor" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/derivative" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/simplify" />


            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/expand" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/factor_prime"
                android:visibility="gone" />

        </io.codetail.widget.RevealLinearLayout>
    </HorizontalScrollView>
</io.codetail.widget.RevealFrameLayout>